business-processes/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-healthcheck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-healthcheck
  template:
    metadata:
      labels:
        app: nginx-healthcheck
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/delault.conf
          readOnly: true
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-healthcheck-service
spec:
  selector:
    app: nginx-healthcheck
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
