business-processes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: camunda.my-k8s.dynv6.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-healthcheck-service
            port:
              name: http
  tls:
  - hosts:
    - camunda.my-k8s.dynv6.net
    secretName: camunda-server-tls # as expected by argocd-server
