business-processes/zeebe.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeebe-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - grpc.camunda.my-k8s.dynv6.net
    secretName: "mycert"
  rules:
  - host: grpc.camunda.my-k8s.dynv6.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: camunda-platform-zeebe-gateway
            port:
              number: 26500
